add twain quote to line 5

--- a/_posts/0000-01-02-rafskov.md
+++ b/_posts/0000-01-02-rafskov.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+The coldest winter I spent in San Francisco was the **summer** I spent in San Francisco
 Use the left arrow to go back!
